[project]
name = "chathelperbot"
version = "0.1.0"
description = "telegram chat bot from moderation and more"
authors = [
    {name = "ifuckingjoke"}
]
license = "MIT"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiogram (==3.27.0)",
    "telethon (==1.43.0)",
    "trgb (==0.1.3)",
    "captcha (==0.7.1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
